<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Book Store</string>

    <!-- Label for overflow menu option that inserts fake book data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all book data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Books</string>

    <!-- Title for the activity to add a new book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_book">Add new Book</string>

    <!-- Title for the activity to edit an existing book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_book">Edit Book</string>

    <!-- Label for editor menu option to save book and leave editor activity [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current book [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>


    <!-- Title text for the empty view, which describes the empty bookshelf image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">No books yet&#8230;</string>

    <!-- Subtitle text for the empty view that prompts the user to add a book [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a book</string>


    <!-- Toast message in editor when new book has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_successful">Book saved</string>

    <!-- Toast message in editor when new book has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_failed">Error with saving book</string>

    <!-- Toast message in editor when current book was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_book_successful">Book updated</string>

    <!-- Toast message in editor when current book has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_book_failed">Error with updating book</string>

    <!-- Toast message in editor when current book was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_successful">Book deleted</string>

    <!-- Toast message in editor when current book has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_failed">Error with deleting book</string>

    <!-- Toast message in editor when all the books were successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_all_books_successful">All the books deleted</string>

    <!-- Toast message in editor when all the books have failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_all_books_failed">Error with deleting all the books</string>


    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current book [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current book [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this book?</string>

    <!-- Dialog message to ask the user to confirm deleting all the books [CHAR LIMIT=NONE] -->
    <string name="delete_all_dialog_msg">Delete all these books?</string>

    <!-- Dialog button text for the option to confirm deleting the current book or all the books [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current book or all the books [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>


    <!-- Label for book information like name, price and quantity in the editor [CHAR LIMIT=30] -->
    <string name="category_book_information">Book</string>

    <!-- Label for supplier name information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier_name">Supplier Name</string>

    <!-- Label for supplier phone information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier_phone">Supplier Phone</string>


    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_name">Name</string>

    <!-- Text hint for author field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_author">Author</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=10] -->
    <string name="hint_book_price">Price</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=10] -->
    <string name="hint_book_quantity">Quantity</string>

    <!-- Text hint for supplier phone number in the editor [CHAR LIMIT=20] -->
    <string name="hint_book_supplier_phone">Phone Number</string>


    <!-- Label for dropdown menu option if the supplier name is Baker & Taylor [CHAR LIMIT=20] -->
    <string name="supplier_name_baker_taylor">Baker &amp; Taylor</string>

    <!-- Label for dropdown menu option if the supplier name is TAN Books [CHAR LIMIT=20] -->
    <string name="supplier_name_tan_books">TAN Books</string>

    <!-- Label for dropdown menu option if the supplier name is Casemate [CHAR LIMIT=20] -->
    <string name="supplier_name_casemate">Casemate</string>


    <!-- Message when the user tries to add a new book and the name is missing [CHAR LIMIT=12] -->
    <string name="name_missing">Product name is missing</string>

    <!-- Message when the user tries to add a new book and the author is missing [CHAR LIMIT=12] -->
    <string name="author_missing">Author name is missing</string>


    <!-- Message when the user tries to add a new book and the quantity is missing [CHAR LIMIT=12] -->
    <string name="quantity_missing">Product quantity is missing</string>

    <!-- Message when the user tries to add a new book and the price is missing [CHAR LIMIT=12] -->
    <string name="price_missing">Product price is missing</string>

    <!-- Message when the user tries to add a new book and the supplier phone is missing [CHAR LIMIT=12] -->
    <string name="supplier_phone_missing">Supplier phone number is missing</string>


    <!-- Name for the sale button [CHAR LIMIT=12] -->
    <string name="sale_button">Sale</string>

    <!-- Message when the sale is successful [CHAR LIMIT=12] -->
    <string name="sale_successful">Product sold</string>

    <!-- Message when the sale failes [CHAR LIMIT=12] -->
    <string name="sale_failed">Error with sale product</string>

    <!-- Message when the user forget to input a quantity [CHAR LIMIT=12] -->
    <string name="sale_quantity_missing">Check the books quantity</string>

    <!-- Name for the plus button to increase the quantity in editor activity [CHAR LIMIT=12] -->
    <string name="plus_button">+</string>

    <!-- Name for the minus button to decrease the quantity in editor activity [CHAR LIMIT=12] -->
    <string name="minus_button">-</string>

    <!-- Message when the user inputs a negative quantity [CHAR LIMIT=12] -->
    <string name="no_negative_quantity">Negative values are not allowed for quantity</string>

    <!-- Name for the button to call and order from a supplier [CHAR LIMIT=12] -->
    <string name="order_button">Order</string>
</resources>