<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    android:focusableInTouchMode="true"
    tools:context=".EditorActivity">
    <!-- Remove auto focus from EditText -->

    <!-- Product category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_book_information"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:paddingLeft="@dimen/edittext_padding_left"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_book_name"
                android:hint="@string/hint_book_name"
                android:inputType="textCapSentences"
                style="@style/EditorFieldStyle" />

            <!-- Author field -->
            <EditText
                android:id="@+id/edit_book_author"
                android:hint="@string/hint_book_author"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_book_price"
                android:hint="@string/hint_book_price"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <!-- quantity field -->
            <EditText
                android:id="@+id/edit_book_quantity"
                android:hint="@string/hint_book_quantity"
                android:inputType="number"
                style="@style/EditorFieldStyle"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_above_and_below_buttons"
                android:layout_marginTop="@dimen/margin_above_and_below_buttons"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/button_edit_increase_quantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/plus_button"
                    android:textSize="20sp" />
                <Button
                    android:id="@+id/button_edit_decrease_quantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/minus_button"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- Supplier name category -->
    <LinearLayout
        android:id="@+id/container_supplier_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_supplier_name"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:orientation="vertical">

            <!-- Supplier name drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_supplier_name"
                android:layout_height="@dimen/spinner_height"
                android:layout_width="wrap_content"
                android:paddingRight="@dimen/spinner_padding_right"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Supplier phone category -->
    <LinearLayout
        android:id="@+id/container_supplier_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_supplier_phone"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:paddingLeft="@dimen/edittext_padding_left">

            <!-- Phone number field -->
            <EditText
                android:id="@+id/edit_supplier_phone"
                android:hint="@string/hint_book_supplier_phone"
                android:inputType="text"
                style="@style/EditorFieldStyle" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>