<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for a single list item in the list of books -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/common_margin">

    <TextView
        android:id="@+id/name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/textColorName"
        tools:text="@string/hint_book_name" />

    <TextView
        android:id="@+id/price_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/textColorPriceAndQuantity"
        tools:text="@string/hint_book_price" />

    <TextView
        android:id="@+id/quantity_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/textColorPriceAndQuantity"
        tools:text="@string/hint_book_quantity" />

    <Button
        android:id="@+id/sale_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:layout_marginTop="@dimen/margin_above_and_below_buttons"
        android:text="@string/sale_button" />
    <!-- android:focusable="false" to be possible to click on list item and open it -->
</LinearLayout>